--- a/PROYECTO FINAL DISENO WEB/adminview.html
+++ b/PROYECTO FINAL DISENO WEB/adminview.html
@@ -35,7 +35,7 @@
                                     <a href="adminview.html">Pagina Principal</a>
                                     <a href="procesos.html">Procesos</a>
                                     <a href="#">Usuarios</a>
-                                    <a href="servicios.html">Servicios</a>
+                                    <a href="servicios.html">Certificaciones</a>
                                   </div>
                                   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>                                  
                                   <script>
