--- a/PROYECTO FINAL DISENO WEB/procesos.html
+++ b/PROYECTO FINAL DISENO WEB/procesos.html
@@ -35,7 +35,7 @@
                         <a href="adminview.html">Pagina Principal</a>
                         <a href="procesos.html">Procesos</a>
                         <a href="#">Usuarios</a>
-                        <a href="servicios.html">Servicios</a>
+                        <a href="servicios.html">Certificaciones</a>
                     </div>
                     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
                     <script>
@@ -1814,7 +1814,7 @@
                                     </div>
                                 </td>
                             </tr>
-                            
+
                             <tr>
                                 <td>July</td>
                                 <td>Dooley</td>
@@ -1867,7 +1867,7 @@
                     </table>
                 </div>
             </div>
-            
+
             <div id="menu1" class="container tab-pane fade"><br>
                 <h3>Para aprobar proceso</h3>
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
