--- a/PROYECTO FINAL DISENO WEB/userview.html
+++ b/PROYECTO FINAL DISENO WEB/userview.html
@@ -33,9 +33,9 @@
                             <div id="mySidenav" class="sidenav">
                                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                                     <a href="adminview.html">Pagina Principal</a>
-                                    <a href="procesosuser.html">Procesos</a>
-                                    <a href="#">Usuarios</a>
-                                    <a href="servicios.html">Servicios</a>
+                                    <a href="procesos.html">Procesos</a>
+                                    <a href="#">Pruebas finalizadas</a>
+                                    <a href="serviciosuser.html">Registrar prueba</a>
                                   </div>
                                   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>                                  
                                   <script>
@@ -80,7 +80,7 @@
                         <span class="navbar-text">
                             <li class="dropdown nav-item">
                                 <a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false"
-                                    href="#">Administrador</a>
+                                    href="#">Usuario</a>
                                 <div class="dropdown-menu" role="menu">
                                     <a class="dropdown-item" role="presentation" href="#">Solicitudes</a>
                                     <a class="dropdown-item" role="presentation" href="#">Privacidad</a>
