--- a/PROYECTO FINAL DISENO WEB/procesosuser.html
+++ b/PROYECTO FINAL DISENO WEB/procesosuser.html
@@ -72,7 +72,7 @@
                         <a href="adminview.html">Pagina Principal</a>
                         <a href="procesos.html">Procesos</a>
                         <a href="#">Registro</a>
-                        <a href="servicios.html">Servicios</a>
+                        <a href="serviciosuser.html">Servicios</a>
                     </div>
                     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
                     <script>
